# auto-penyata

./: CMakeLists.txt  README.md
.github/workflows/: macos-build.yml  windows-build.yml
src/: apur.cpp  asetbukansemasa.cpp  asetsemasa.cpp  belanja.cpp  blockmanager.cpp  ekuitipemilik.cpp  hasil.cpp  jsonmanager.cpp  liabilitibukansemasa.cpp  liabilitisemasa.cpp  main.cpp  mainwindow.cpp  pagemanager.cpp  pdfgenerator.cpp  setting.cpp  statusbar.cpp
src/header/: apur.h  asetbukansemasa.h  asetsemasa.h  belanja.h  blockmanager.h  ekuitipemilik.h  hasil.h  jsonmanager.h  liabilitibukansemasa.h  liabilitisemasa.h  mainwindow.h  pagemanager.h  pdfgenerator.h  setting.h  statusbar.h
